--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+appdirs==1.4.4
 asgiref==3.4.1
-astroid==2.7.2
+astroid==2.6.6
 attrs==21.2.0
+black==21.7b0
+click==8.0.1
 Django==3.2.6
 image==1.5.33
 importlab==0.6.1
@@ -12,17 +15,20 @@ mypy-extensions==0.4.3
 networkx==2.6.2
 ninja==1.10.2
 numpy==1.21.2
+pathspec==0.9.0
 Pillow==8.3.1
 platformdirs==2.2.0
-pygame==2.0.1
-pylint==2.10.2
+pygame==2.0.2.dev2
+pylint==3.0.0a4
 pytype==2021.8.24
 pytz==2021.1
 PyYAML==5.4.1
+regex==2021.8.27
 six==1.16.0
 sqlparse==0.4.1
 tabulate==0.8.9
 toml==0.10.2
+tomli==1.2.1
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
 typing-inspect==0.7.1
